@@ -1,3 +1,8 @@
+2011-04-15  Emilio Meschi <Emilio.Meschi@cern.ch>
+
+	* tag V01-05-06
+	* change fatal exception to error message and recall 
+	
 2011-04-13  Emilio Meschi <Emilio.Meschi@cern.ch>
 
 	* tag V01-05-05 (V01-05-04 already used)
